# rename-extensions

./: Cargo.toml  README.md
src/: main.rs
