[package]
authors = ["David Irvine <david.irvine@maidsafe.net>"]
name = "rename-extensions"
version = "0.2.0"
descrption = "A simple script to rename files extensions."
licence = "GPL-3"

[dependencies]
clap = "~2.26.0"
glob = "~0.2.11"

[package.metadata.release]
no-dev-version = true
sign-commit = true

